# CAS_Final_Project

./: .gitignore  CMakeLists.txt  README.md  calculateMassMatrix.hpp  calculatePhiMatrix.hpp  config.sh  main.cpp  massMatrix.cpp  massMatrixIntegrator.hpp  massPhiMatrixSolver.hpp  rhsMatrixFunctions.hpp
.github/workflows/: ci.yml  code-quality.yml  deploy.yml  release.yml  validation.yml
create_mesh/: CMakeLists.txt  build_simplex_mesh.cpp  generate_meshes.sh  mesh.geo  mesh.msh  process_geo_files.sh
create_mesh/mesh.osh/: 0.osh
create_mesh/source_mesh/: .msh  source.msh  source_mesh.geo
create_mesh/source_mesh/source_mesh.osh/: 0.osh
create_mesh/target_mesh/: .msh  target_mesh.geo  target_mesh.msh
create_mesh/target_mesh/target_mesh.osh/: 0.osh
tests/: test_point_to_mesh_map.cpp
